<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/fab_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/svMovieDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingBottom="35dp">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:indeterminate="true"
                android:max="100"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="150dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@+id/progressBar"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tvTitleDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/progressBar"
                app:layout_constraintLeft_toRightOf="@+id/ivPoster"
                android:layout_marginTop="5dp"
                android:text="@string/desc_title"
                android:textColor="@color/colorGray"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleDesc"
                app:layout_constraintLeft_toRightOf="@+id/ivPoster"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tvReleaseDateDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                app:layout_constraintLeft_toRightOf="@+id/ivPoster"
                android:layout_marginTop="15dp"
                android:text="@string/desc_release_date"
                android:textColor="@color/colorGray"/>

            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvReleaseDateDesc"
                app:layout_constraintLeft_toRightOf="@+id/ivPoster"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tvGenreDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate"
                app:layout_constraintLeft_toRightOf="@+id/ivPoster"
                android:layout_marginTop="15dp"
                android:text="@string/desc_genre"
                android:textColor="@color/colorGray"/>

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvGenreDesc"
                app:layout_constraintLeft_toRightOf="@+id/ivPoster"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tvOverviewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ivPoster"
                android:layout_marginTop="15dp"
                android:text="@string/desc_overview"
                android:textColor="@color/colorGray"/>

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvOverviewDesc"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/ivYoutube"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:layout_constraintTop_toBottomOf="@+id/tvOverview"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="25dp"/>

            <TextView
                android:id="@+id/tvYoutubeDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ivYoutube"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/desc_youtube"
                android:textColor="@color/colorPrimary"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clConnection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="visible">

        <ImageView
            android:id="@+id/ivConnection"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/connection_failed" />

        <TextView
            android:id="@+id/tvConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ivConnection"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            android:text="@string/msg_offline"
            android:textSize="@dimen/offline_hint"
            android:textColor="@color/colorGray" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
